2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_estimate(): replace vstrextend() with a
	  GString

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_optionstr(): replace vstrextend() with a
	  GPtrArray and a GString

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: optionstr(): replace vstrextend() with a
	  GPtrArray

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amindexd.c: main(): replace vstrextend() with a GString

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amcheck.c: start_host(): replace vstrextend() with a
	  GString

2011-06-09  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/extract_list.c: read_amidxtaped_data(): replace
	  vstrextend() with g_strdup_printf()

2011-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Do not check optarg, we know it is not null
	* common-src/conffile.c: Do not check key_ovr, we know it is not null

2011-06-06  Satya Ganga <gsat@zmanda.com>
	* perl/Amanda/Application/Zfs.pm: Use correct device name, we have to
	use user provided Disk device name.

2011-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/rundump.c: Fix cast of g_ptr_array_free to (gchar **).

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/util.c: remove usage of vstrextend() by using a GString. No
	  choice here, we have to peek into the GPtrArray.

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/tapelist.c: remove usages of vstrextend() with a
	  GPtrArray/GString combination

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/pipespawn.c: remove usage of vstrextend() with a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/fileheader.c: remove usage of vstrextend() with a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>